--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <h2 class="numeriDaIndovinare" id="text"></h2>
+    <h2 id="soluzione"></h2>
     
     <script src="js/main.js"></script>
 </body>
